# livekit-agents

livekit-agents/livekit/agents/voice/: agent_activity.py  agent_session.py
livekit-plugins/livekit-plugins-gender-detection/: pyproject.toml
livekit-plugins/livekit-plugins-gender-detection/livekit/plugins/gender_detection/: __init__.py  detector.py  log.py
livekit-plugins/livekit-plugins-google/livekit/plugins/google/: llm.py
livekit-plugins/livekit-plugins-openai/livekit/plugins/openai/: tts.py
